--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   dart_jsonwebtoken: ^3.2.0
   firebase_crashlytics: ^4.3.5
   geocoding: ^3.0.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
