--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   firebase_crashlytics: ^4.3.5
   geocoding: ^3.0.0
   cached_network_image: ^3.4.1
+  flutter_stripe: ^11.5.0
 
 dev_dependencies:
   flutter_test:
