--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   geocoding: ^3.0.0
   cached_network_image: ^3.4.1
   pusher_channels_flutter: ^2.4.0
+  webview_flutter: ^4.13.0
   # flutter_local_notifications: ^19.2.1
 
 dev_dependencies:
