--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   cached_network_image: ^3.4.1
   pusher_channels_flutter: ^2.4.0
   webview_flutter: ^4.13.0
+  uni_links: ^0.5.1
   # flutter_local_notifications: ^19.2.1
 
 dev_dependencies:
